# servant-forma

./: README.md  cabal.project  default.nix  hie.yaml
nix/: sources.json
servant-forma/: LICENSE  servant-forma.cabal
servant-forma-server/: README.lhs  servant-forma-server.cabal
servant-forma-server/src/Servant/Forma/: Server.hs
servant-forma-server/test/Servant/Forma/: ServerSpec.hs
servant-forma/src/Servant/: Forma.hs
