cabal-version: 2.2
name: servant-forma-server
version: 0.1.0
build-type: Simple
license: MIT
license-file: LICENSE

library
  hs-source-dirs: src
  default-language: Haskell2010
  exposed-modules: Servant.Forma.Server
  build-depends: aeson
               , base
               , bytestring
               , containers
               , forma
               , http-types
               , text
               , servant
               , servant-forma
               , servant-server
               , wai

test-suite spec
  type: exitcode-stdio-1.0
  main-is: Spec.hs
  hs-source-dirs: test
  default-language: Haskell2010
  other-modules: Servant.Forma.ServerSpec
  build-depends: aeson
               , base
               , hspec
               , http-client
               , http-types
               , lens
               , mtl
               , servant-forma-server
               , servant-server
               , text
               , warp
               , wreq